# hello_qt

./: .gitignore  CMakeLists.txt  TesteQt.pro  dialogabout.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
